backend-platform/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: backend-platform

spec:
  ingressClassName: nginx

  rules:

    - host: api.example.com

      http:
        paths:

          - path: /auth
            pathType: Prefix

            backend:
              service:
                name: auth-service

                port:
                  number: 8081
